# pdmQt

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.b48ce18  PdmRunTime.cpp  PdmRuntimeRef.h  README.md  accountwidget.cpp  accountwidget.h  accountwidget.ui  debugwindow.ui  form.ui  informationwidget.cpp  informationwidget.h  loginwidget.cpp  loginwidget.h  macosMod.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  pdmsettingswindow.cpp  pdmsettingswindow.h  pdmsettingswindow.ui  resources.qrc  settingsmainwindow.cpp  settingsmainwindow.h  settingsmainwindow.ui
lib/: .gitignore  buildFramelessMac.sh  buildFramelessWin.cmd  buildWindowKitMacos.txt  parser.h
lib/framelesshelperBuild 2/: .ninja_deps  .ninja_log  CMakeCache.txt  FramelessHelperConfig.cmake  build.ninja  cmake_install.cmake  install_manifest.txt
lib/framelesshelperBuild 2/.qt/: QtDeploySupport.cmake
lib/framelesshelperBuild 2/imports/org/wangwenx190/FramelessHelper/: FramelessHelperQuick_qml_module_dir_map.qrc  libFramelessHelperQuickplugin.dylib  plugins.qmltypes  qmldir
lib/framelesshelperBuild 2/include/FramelessHelper/Core/: framelesshelper.version
lib/framelesshelperBuild 2/lib64/: libFramelessHelperCore.2.5.0.dylib  libFramelessHelperCore.2.dylib  libFramelessHelperCore.dylib  libFramelessHelperQuick.2.5.0.dylib  libFramelessHelperQuick.2.dylib  libFramelessHelperQuick.dylib  libFramelessHelperWidgets.2.5.0.dylib  libFramelessHelperWidgets.2.dylib  libFramelessHelperWidgets.dylib
lib/framelesshelperBuild 2/lib64/cmake/FramelessHelper/: FramelessHelperConfig.cmake  FramelessHelperCoreTargets-release.cmake  FramelessHelperQuickTargets-release.cmake  FramelessHelperWidgetsTargets-release.cmake  FramelessHelperWidgetsTargets.cmake
lib/framelesshelperBuild 2/qml/org/wangwenx190/FramelessHelper/: libFramelessHelperQuickplugin.dylib
lib/framelesshelperBuild 2/src/: cmake_install.cmake
lib/framelesshelperBuild 2/src/core/: cmake_install.cmake
lib/framelesshelperBuild 2/src/core/.rcc/: framelesshelpercore.qrc  qrc_framelesshelpercore.cpp
lib/framelesshelperBuild 2/src/core/FramelessHelperCore_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
lib/framelesshelperBuild 2/src/core/FramelessHelperCore_autogen/FKC5CFB2CV/: moc_chromepalette.cpp  moc_chromepalette.cpp.d  moc_framelesshelper_qt.cpp  moc_framelesshelper_qt.cpp.d  moc_framelesshelpercore_global.cpp  moc_framelesshelpercore_global.cpp.d  moc_framelessmanager.cpp  moc_framelessmanager.cpp.d  moc_micamaterial.cpp  moc_micamaterial.cpp.d  moc_windowborderpainter.cpp  moc_windowborderpainter.cpp.d
lib/framelesshelperBuild 2/src/core/cmake/: FramelessHelperCoreTargets.cmake
lib/framelesshelperBuild 2/src/quick/: cmake_install.cmake
lib/framelesshelperBuild 2/src/quick/.rcc/: qmake_org_wangwenx190_FramelessHelper.qrc  qrc_qmake_org_wangwenx190_FramelessHelper.cpp
lib/framelesshelperBuild 2/src/quick/FramelessHelperQuick_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
lib/framelesshelperBuild 2/src/quick/FramelessHelperQuickplugin_autogen/: deps  moc_predefs.h
lib/framelesshelperBuild 2/src/quick/cmake/: FramelessHelperQuickTargets.cmake
lib/framelesshelperBuild 2/src/quick/meta_types/: FramelessHelperQuick_json_file_list.txt  FramelessHelperQuick_json_file_list.txt.timestamp  qt6framelesshelperquick_release_metatypes.json.gen
lib/framelesshelperBuild 2/src/quick/qmltypes/: FramelessHelperQuick_foreign_types.txt
lib/framelesshelperBuild 2/src/widgets/: cmake_install.cmake
lib/framelesshelperBuild 2/src/widgets/FramelessHelperWidgets_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
lib/framelesshelperBuild 2/src/widgets/cmake/: FramelessHelperWidgetsTargets.cmake
src/: CustomWindow.cpp  CustomWindow.h  PdmRunTime.cpp  PdmRunTime.h  PdmRunTimeRef.cpp  PdmRunTimeRef.h  PdmRuntimeRef.cpp  PdmRuntimeRef.h  accountwidget.cpp  accountwidget.h  debugwindow.cpp  debugwindow.h  debugwindow.ui  informationwidget.cpp  loginwidget.cpp  loginwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowui.h  pdm.cpp  pdm.h  settingsmainwindow.cpp  settingsmainwindow.h  settingsmainwindow.ui  shadowFrameWidget.cpp  shadowFrameWidget.h  userinformation.cpp  userinformation.h  userinformation.ui
src/handler/: net_convert.cpp  net_convert.h  pdm_command.cpp  pdm_command.h  pdm_commands.cpp  pdm_commands.h  pdm_database.h  pdm_databse.cpp  pdm_net.cpp  pdm_net.h  pdm_net_type.cpp  pdm_net_type.h  pdm_qt_helpers.cpp  pdm_qt_helpers.h  pdm_settings.cpp  pdm_settings.h  pdm_status.h  pdm_status_qt.cpp  pdm_status_qt.h  types.h
src/handler/dao/: pdmLocalDao.cpp  pdmLocalDao.h  pdmLocalDaoTables.cpp  pdmLocalDaoTables.h  pdmNotesCache.cpp  pdmNotesCache.h
src/handler/db/: PdmDBType.h  PdmDBTypes.h  pdm_database.h  pdm_databse.cpp
src/handler/pdmqt/: pdm_qt_net.cpp  pdm_qt_net.h
src/helpers/: Animated.h  FlashingCircle.cpp  FlashingCircle.h  PdmUpdateTimer.cpp  PdmUpdateTimer.h  buzywidget.cpp  buzywidget.h  buzywidget.ui
src/notesView/: Note.h  NoteEdit.cpp  NoteEdit.h  NotesScroll.cpp  NotesScroll.h  NotesScrollDelegate.h  pdmListSortingMenu.cpp  pdmListSortingMenu.h  pdmListView.cpp  pdmListView.h  pdmListViewSortFilterProxyModel.cpp  pdmListViewSortFilterProxyModel.h
src/others/: CustomTitleBar.cpp  CustomTitleBar.h  MacCustomWindow.h  PasswordDialog.h  debugwindow.cpp  debugwindow.h  debugwindow.ui  debugwindowCommandWidget.cpp  debugwindowCommandWidget.h  macOSWindow.mm  macOSWindowBridge.h  macOSWindowBridge.mm  pdmQtHelpers.h  pdmQtWidgets.h  shadowFrameWidget.cpp  shadowFrameWidget.h
src/others/tools/: pdmExtraQtWidgets.h  pdmQtHelpers.cpp  pdmQtHelpers.h  pdmQtWidgets.cpp  pdmQtWidgets.h
src/settings/: accountwidget.cpp  accountwidget.h  accountwidget.ui  informationwidget.cpp  informationwidget.h  informationwidget.ui  loginwidget.cpp  loginwidget.h  settingsmainwindow.cpp  settingsmainwindow.h  settingsmainwindow.ui  settingsmenuWidget.cpp  settingsmenuWidget.h  userinformation.cpp  userinformation.h
(+81 files in other folders)
